# iug-g2

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindAllegro.cmake
include/: ei_application.h  ei_eventmanager.h  ei_geometrymanager.h  ei_movableonclick.h  ei_resizebutton.h  ei_tools.h  ei_toplevel.h  ei_toppanel.h  ei_types.h  ei_widget.h  ei_widgetdatabank.h  ei_widgetplacerdata.h
src/: application.cpp  ei_application.cpp  ei_button.cpp  ei_draw.cpp  ei_eventmanager.cpp  ei_frame.cpp  ei_movableonclick.cpp  ei_placer.cpp  ei_resizebutton.cpp  ei_tools.cpp  ei_toplevel.cpp  ei_toppanel.cpp  ei_widget.cpp  ei_widgetdatabank.cpp  ei_widgetplacerdata.cpp
tests/: CMakeLists.txt  button.cpp  frame.cpp  minimal.cpp  toplevel.cpp  unit_tests.cpp
